# kuryr-libnetwork

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
contrib/busybox/: build_image.sh
contrib/docker/: run_kuryr.sh
contrib/docker/libnetwork/: run_kuryr.sh
contrib/docker/v2plugin/: config.json  v2plugin_rootfs.sh
contrib/tls/: kuryr.json
contrib/vagrant/: README.md  Vagrantfile  add_vagrant_user.sh  vagrant.sh
contrib/vagrant/config/: kuryr_rc
devstack/: local.conf.sample  plugin.sh  settings
doc/source/: conf.py  config-sriov.rst  fullstack-test.rst  index.rst
doc/source/devref/: index.rst  libnetwork_remote_driver_design.rst
doc/source/install/: compute-install-ubuntu.rst  compute-install.rst  controller-install.rst  get_started.rst  index.rst  next-steps.rst  verify.rst
etc/: kuryr-config-generator.conf  kuryr.json  kuryr.spec
kuryr_libnetwork/: __init__.py  config.py  constants.py  controllers.py  opts.py  server.py  utils.py  version.py
kuryr_libnetwork/common/: config.py
kuryr_libnetwork/port_driver/: base.py  driver.py
kuryr_libnetwork/port_driver/drivers/: nested.py  sriov.py  veth.py  vlan.py
kuryr_libnetwork/schemata/: __init__.py  commons.py  endpoint_create.py  endpoint_delete.py  endpoint_info.py  join.py  leave.py  network_create.py  network_delete.py  release_address.py  release_pool.py  request_address.py  request_pool.py
kuryr_libnetwork/tests/contrib/: gate_hook.sh  post_test_hook.sh
kuryr_libnetwork/tests/fullstack/: kuryr_base.py  test_container.py  test_ipam.py  test_network.py
kuryr_libnetwork/tests/unit/: base.py  test_config.py  test_external_connectivity.py  test_ipam_pool.py  test_join.py  test_kuryr.py  test_kuryr_endpoint.py  test_kuryr_existing_network.py  test_kuryr_ipam.py  test_kuryr_network.py  test_leave.py  test_schema.py  test_utils.py
kuryr_libnetwork/tests/unit/port_driver/: test_base.py  test_driver.py
kuryr_libnetwork/tests/unit/port_driver/drivers/: test_nested.py  test_sriov.py  test_veth.py  test_vlan.py
playbooks/kuryr-libnetwork-fullstack-base/: run-ipv6.yaml  run.yaml
playbooks/kuryr-libnetwork-install/: run.yaml
playbooks/kuryr-libnetwork-install-multinode/: run.yaml
playbooks/kuryr-libnetwork-rally-base/: run.yaml
rally-jobs/: README.rst  kuryr-libnetwork.yaml
rally-jobs/plugins/context/: docker_networks.py
rally-jobs/plugins/scenarios/: kuryr.py  utils.py
rally-jobs/tasks/scenarios/: create_and_delete_networks_with_kuryr.json  create_and_delete_networks_without_kuryr.json
releasenotes/notes/: add_support_ipv6_subnet-a024ffd6f7acc883.yaml  bp-existing-subnetpool-aa454cf843cba47c.yaml  bug-1668803-c39f746e38878239.yaml  bug-1671222-9ea0cf3ab39f0abc.yaml  drop-py-2-7-033606554411d7c6.yaml  use-uwsgi-to-run-server-4f43e615fd277c73.yaml
releasenotes/source/: conf.py  index.rst
scripts/: run_kuryr.sh
tools/: generate_config_file_samples.sh  ostestr_compat_shim.sh  tox_install.sh
