[metadata]
name = kuryr-libnetwork
summary = Docker libnetwork driver for OpenStack Neutron
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[bdist_wheel]
universal = 1

[entry_points]
oslo.config.opts =
    kuryr = kuryr_libnetwork.opts:list_kuryr_opts

console_scripts =
    kuryr-server = kuryr_libnetwork.server:start

[files]
packages =
    kuryr_libnetwork
data_files =
    /usr/lib/docker/plugins/kuryr = etc/kuryr.spec

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kuryr_libnetwork/locale
domain = kuryr

[update_catalog]
domain = kuryr_libnetwork
output_dir = kuryr_libnetwork/locale
input_file = kuryr_libnetwork/locale/kuryr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kuryr_libnetwork/locale/kuryr.pot
