[metadata]
name = kuryr-libnetwork
summary = Docker libnetwork driver for OpenStack Neutron
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kuryr-libnetwork/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[entry_points]
oslo.config.opts =
    kuryr_libnetwork = kuryr_libnetwork.opts:list_kuryr_libnetwork_opts

console_scripts =
    kuryr-server = kuryr_libnetwork.server:start

[files]
packages =
    kuryr_libnetwork
data_files =
    /usr/lib/docker/plugins/kuryr = etc/kuryr.spec
