[metadata]
name = kuryr-libnetwork
summary = Docker libnetwork driver for OpenStack Neutron
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/kuryr-libnetwork/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[entry_points]
oslo.config.opts =
    kuryr_libnetwork = kuryr_libnetwork.opts:list_kuryr_libnetwork_opts

console_scripts =
    kuryr-server = kuryr_libnetwork.server:start

[files]
packages =
    kuryr_libnetwork
data_files =
    /usr/lib/docker/plugins/kuryr = etc/kuryr.spec
